Finished currency wallet service
