# api/swagger.yaml
@@ -1,11 +1,212 @@
 basePath: /api/v1
 definitions:
+  handlers.BalanceErrorResponse:
+    properties:
+      error:
+        description: |-
+          Error message
+          default: Unauthorized
+        type: string
+    type: object
+  handlers.BalanceResponse:
+    properties:
+      balance:
+        allOf:
+        - $ref: '#/definitions/handlers.CurrencyBalance'
+        description: User balances
+    type: object
+  handlers.CurrencyBalance:
+    properties:
+      EUR:
+        description: |-
+          Balance in EUR
+          default: 50.0
+        type: number
+      RUB:
+        description: |-
+          Balance in RUB
+          default: 5000.0
+        type: number
+      USD:
+        description: |-
+          Balance in USD
+          default: 100.0
+        type: number
+    type: object
+  handlers.CurrencyBalanceAfterDeposit:
+    properties:
+      EUR:
+        description: |-
+          Balance in EUR
+          default: 50.0
+        type: number
+      RUB:
+        description: |-
+          Balance in RUB
+          default: 5000.0
+        type: number
+      USD:
+        description: |-
+          Balance in USD
+          default: 100.0
+        type: number
+    type: object
+  handlers.CurrencyBalanceAfterWithdraw:
+    properties:
+      EUR:
+        description: |-
+          Balance in EUR
+          default: 50.0
+        type: number
+      RUB:
+        description: |-
+          Balance in RUB
+          default: 5000.0
+        type: number
+      USD:
+        description: |-
+          Balance in USD
+          default: 100.0
+        type: number
+    type: object
+  handlers.DepositErrorResponse:
+    properties:
+      error:
+        description: |-
+          Error message
+          default: Invalid amount or currency
+        type: string
+    type: object
+  handlers.DepositRequest:
+    properties:
+      amount:
+        description: |-
+          Amount to deposit
+          required: true
+          default: 100.0
+        type: number
+      currency:
+        description: |-
+          Currency
+          required: true
+          default: USD
+        type: string
+    type: object
+  handlers.DepositResponse:
+    properties:
+      message:
+        description: |-
+          Success message
+          default: Account topped up successfully
+        type: string
+      new_balance:
+        allOf:
+        - $ref: '#/definitions/handlers.CurrencyBalanceAfterDeposit'
+        description: New balance of the user
+    type: object
+  handlers.ExchangeErrorResponse:
+    properties:
+      error:
+        description: |-
+          Error message
+          default: Insufficient funds or invalid currencies
+        type: string
+    type: object
+  handlers.ExchangeRates:
+    properties:
+      EUR:
+        description: |-
+          EUR exchange rate
+          default: 0.85
+        type: number
+      RUB:
+        description: |-
+          RUB exchange rate
+          default: 90.0
+        type: number
+      USD:
+        description: |-
+          USD exchange rate
+          default: 1.0
+        type: number
+    type: object
+  handlers.ExchangeRatesErrorResponse:
+    properties:
+      error:
+        description: |-
+          Error message
+          default: Failed to retrieve exchange rates
+        type: string
+    type: object
+  handlers.ExchangeRatesResponse:
+    properties:
+      rates:
+        allOf:
+        - $ref: '#/definitions/handlers.ExchangeRates'
+        description: Exchange rates
+    type: object
+  handlers.ExchangeRequest:
+    properties:
+      amount:
+        description: |-
+          Amount to exchange
+          required: true
+          default: 100.0
+        type: number
+      from_currency:
+        description: |-
+          Source currency
+          required: true
+          default: USD
+        type: string
+      to_currency:
+        description: |-
+          Target currency
+          required: true
+          default: EUR
+        type: string
+    type: object
+  handlers.ExchangeResponse:
+    properties:
+      exchanged_amount:
+        description: |-
+          Amount received after exchange
+          default: 85.0
+        type: number
+      message:
+        description: |-
+          Success message
+          default: Exchange successful
+        type: string
+      new_balance:
+        allOf:
+        - $ref: '#/definitions/handlers.ExchangedBalance'
+        description: New balance after exchange
+    type: object
+  handlers.ExchangedBalance:
+    properties:
+      EUR:
+        description: |-
+          Balance in EUR
+          default: 50.0
+        type: number
+      RUB:
+        description: |-
+          Balance in RUB
+          default: 5000.0
+        type: number
+      USD:
+        description: |-
+          Balance in USD
+          default: 100.0
+        type: number
+    type: object
   handlers.LoginErrorResponse:
     properties:
       error:
         description: |-
           Error message
-          example: Invalid username or password
+          default: Invalid username or password
         type: string
     type: object
   handlers.LoginRequest:
@@ -14,13 +215,13 @@ definitions:
         description: |-
           Password
           required: true
-          example: secret123
+          default: secret123
         type: string
       username:
         description: |-
           Username
           required: true
-          example: john_doe
+          default: john_doe
         type: string
     type: object
   handlers.LoginResponse:
@@ -28,7 +229,7 @@ definitions:
       token:
         description: |-
           JWT token
-          example: JWT_TOKEN
+          default: JWT_TOKEN
         type: string
     type: object
   handlers.RegisterErrorResponse:
@@ -36,7 +237,7 @@ definitions:
       error:
         description: |-
           Error message
-          example: Username or email already exists
+          default: Username or email already exists
         type: string
     type: object
   handlers.RegisterRequest:
@@ -45,19 +246,19 @@ definitions:
         description: |-
           Email
           required: true
-          example: john@example.com
+          default: john@example.com
         type: string
       password:
         description: |-
           Password
           required: true
-          example: secret123
+          default: secret123
         type: string
       username:
         description: |-
           Username
           required: true
-          example: john_doe
+          default: john_doe
         type: string
     type: object
   handlers.RegisterResponse:
@@ -65,183 +266,42 @@ definitions:
       message:
         description: |-
           Success message
-          example: User registered successfully
+          default: User registered successfully
         type: string
     type: object
-  models.BalanceErrorResponse:
+  handlers.WithdrawErrorResponse:
     properties:
       error:
         description: |-
           Error message
-          example: Unauthorized
+          default: Insufficient funds or invalid amount
         type: string
     type: object
-  models.BalanceResponse:
-    properties:
-      balance:
-        allOf:
-        - $ref: '#/definitions/models.CurrencyBalance'
-        description: User balances
-    type: object
-  models.CurrencyBalance:
-    properties:
-      EUR:
-        description: |-
-          Balance in EUR
-          example: 50.0
-        type: number
-      RUB:
-        description: |-
-          Balance in RUB
-          example: 5000.0
-        type: number
-      USD:
-        description: |-
-          Balance in USD
-          example: 100.0
-        type: number
-    type: object
-  models.DepositErrorResponse:
-    properties:
-      error:
-        description: |-
-          Error message
-          example: Invalid amount or currency
-        type: string
-    type: object
-  models.DepositRequest:
-    properties:
-      amount:
-        description: |-
-          Amount to deposit
-          required: true
-          example: 100.0
-        type: number
-      currency:
-        description: |-
-          Currency
-          required: true
-          example: USD
-        type: string
-    type: object
-  models.DepositResponse:
-    properties:
-      message:
-        description: |-
-          Success message
-          example: Account topped up successfully
-        type: string
-      new_balance:
-        allOf:
-        - $ref: '#/definitions/models.CurrencyBalance'
-        description: New balance of the user
-    type: object
-  models.ExchangeErrorResponse:
-    properties:
-      error:
-        description: |-
-          Error message
-          example: Insufficient funds or invalid currencies
-        type: string
-    type: object
-  models.ExchangeRates:
-    properties:
-      EUR:
-        example: 0.85
-        type: number
-      RUB:
-        example: 90
-        type: number
-      USD:
-        example: 1
-        type: number
-    type: object
-  models.ExchangeRatesErrorResponse:
-    properties:
-      error:
-        description: |-
-          Error message
-          example: Failed to retrieve exchange rates
-        type: string
-    type: object
-  models.ExchangeRatesResponse:
-    properties:
-      rates:
-        allOf:
-        - $ref: '#/definitions/models.ExchangeRates'
-        description: Exchange rates
-    type: object
-  models.ExchangeRequest:
-    properties:
-      amount:
-        description: |-
-          Amount to exchange
-          required: true
-          example: 100.0
-        type: number
-      from_currency:
-        description: |-
-          Source currency
-          required: true
-          example: USD
-        type: string
-      to_currency:
-        description: |-
-          Target currency
-          required: true
-          example: EUR
-        type: string
-    type: object
-  models.ExchangeResponse:
-    properties:
-      exchanged_amount:
-        description: |-
-          Amount received after exchange
-          example: 85.0
-        type: number
-      message:
-        description: |-
-          Success message
-          example: Exchange successful
-        type: string
-      new_balance:
-        allOf:
-        - $ref: '#/definitions/models.CurrencyBalance'
-        description: New balance after exchange
-    type: object
-  models.WithdrawErrorResponse:
-    properties:
-      error:
-        description: |-
-          Error message
-          example: Insufficient funds or invalid amount
-        type: string
-    type: object
-  models.WithdrawRequest:
+  handlers.WithdrawRequest:
     properties:
       amount:
         description: |-
           Amount to withdraw
           required: true
-          example: 50.0
+          default: 50.0
         type: number
       currency:
         description: |-
           Currency
           required: true
-          example: USD
+          default: USD
         type: string
     type: object
-  models.WithdrawResponse:
+  handlers.WithdrawResponse:
     properties:
       message:
         description: |-
           Success message
-          example: Withdrawal successful
+          default: Withdrawal successful
         type: string
       new_balance:
         allOf:
-        - $ref: '#/definitions/models.CurrencyBalance'
+        - $ref: '#/definitions/handlers.CurrencyBalanceAfterWithdraw'
         description: New balance of the user
     type: object
 host: localhost:8080
@@ -260,11 +320,15 @@ paths:
         "200":
           description: User balance
           schema:
-            $ref: '#/definitions/models.BalanceResponse'
+            $ref: '#/definitions/handlers.BalanceResponse'
         "401":
           description: Unauthorized
           schema:
-            $ref: '#/definitions/models.BalanceErrorResponse'
+            $ref: '#/definitions/handlers.BalanceErrorResponse'
+        "500":
+          description: Internal server error
+          schema:
+            $ref: '#/definitions/handlers.BalanceErrorResponse'
       security:
       - BearerAuth: []
       summary: Get user balance
@@ -282,22 +346,22 @@ paths:
         name: request
         required: true
         schema:
-          $ref: '#/definitions/models.ExchangeRequest'
+          $ref: '#/definitions/handlers.ExchangeRequest'
       produces:
       - application/json
       responses:
         "200":
           description: Exchange successful
           schema:
-            $ref: '#/definitions/models.ExchangeResponse'
+            $ref: '#/definitions/handlers.ExchangeResponse'
         "400":
           description: Insufficient funds or invalid currencies
           schema:
-            $ref: '#/definitions/models.ExchangeErrorResponse'
+            $ref: '#/definitions/handlers.ExchangeErrorResponse'
         "401":
           description: Unauthorized
           schema:
-            $ref: '#/definitions/models.ExchangeErrorResponse'
+            $ref: '#/definitions/handlers.ExchangeErrorResponse'
       security:
       - BearerAuth: []
       summary: Exchange currency
@@ -312,15 +376,15 @@ paths:
         "200":
           description: Exchange rates
           schema:
-            $ref: '#/definitions/models.ExchangeRatesResponse'
+            $ref: '#/definitions/handlers.ExchangeRatesResponse'
         "401":
           description: Unauthorized
           schema:
-            $ref: '#/definitions/models.ExchangeRatesErrorResponse'
+            $ref: '#/definitions/handlers.ExchangeRatesErrorResponse'
         "500":
           description: Failed to retrieve exchange rates
           schema:
-            $ref: '#/definitions/models.ExchangeRatesErrorResponse'
+            $ref: '#/definitions/handlers.ExchangeRatesErrorResponse'
       security:
       - BearerAuth: []
       summary: Get exchange rates
@@ -395,22 +459,22 @@ paths:
         name: request
         required: true
         schema:
-          $ref: '#/definitions/models.DepositRequest'
+          $ref: '#/definitions/handlers.DepositRequest'
       produces:
       - application/json
       responses:
         "200":
           description: Account topped up successfully
           schema:
-            $ref: '#/definitions/models.DepositResponse'
+            $ref: '#/definitions/handlers.DepositResponse'
         "400":
           description: Invalid amount or currency
           schema:
-            $ref: '#/definitions/models.DepositErrorResponse'
+            $ref: '#/definitions/handlers.DepositErrorResponse'
         "401":
           description: Unauthorized
           schema:
-            $ref: '#/definitions/models.DepositErrorResponse'
+            $ref: '#/definitions/handlers.DepositErrorResponse'
       security:
       - BearerAuth: []
       summary: Deposit funds
@@ -428,22 +492,22 @@ paths:
         name: request
         required: true
         schema:
-          $ref: '#/definitions/models.WithdrawRequest'
+          $ref: '#/definitions/handlers.WithdrawRequest'
       produces:
       - application/json
       responses:
         "200":
           description: Withdrawal successful
           schema:
-            $ref: '#/definitions/models.WithdrawResponse'
+            $ref: '#/definitions/handlers.WithdrawResponse'
         "400":
           description: Insufficient funds or invalid amount
           schema:
-            $ref: '#/definitions/models.WithdrawErrorResponse'
+            $ref: '#/definitions/handlers.WithdrawErrorResponse'
         "401":
           description: Unauthorized
           schema:
-            $ref: '#/definitions/models.WithdrawErrorResponse'
+            $ref: '#/definitions/handlers.WithdrawErrorResponse'
       security:
       - BearerAuth: []
       summary: Withdraw funds
